--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "webpack --mode development --watch",
     "start:server": "nodemon server/index.js",
     "build": "webpack --mode production",
-    "seed": "node database/seed.js",
+    "generate:stockInfo": "node database/dataGeneration/stockInfo/cluster.js",
+    "generate:quoteInfo": "node database/dataGeneration/quoteInfo/cluster.js",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -63,7 +64,6 @@
     "eslint-plugin-react": "^7.11.0",
     "file-loader": "^3.0.1",
     "jest": "^24.5.0",
-    "mongodb-memory-server": "^4.2.1",
     "style-loader": "^0.23.1",
     "supertest": "^4.0.2",
     "webpack": "^4.29.6",
