Implement seed script for PostgreSQL and Cassandra

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "build": "webpack --mode production",
     "generate:stockInfo": "node database/dataGeneration/stockInfo/cluster.js",
     "generate:quoteInfo": "node database/dataGeneration/quoteInfo/cluster.js",
+    "seed:postgres": "psql -d stock_chart -a -f database/seed/schema.sql",
+    "preseed:cassandra": "cqlsh 127.0.0.1 9042 -f database/seed/schema.cql",
+    "seed:cassandra": "gunzip -c database/dataGeneration/stockData.csv.gz | cqlsh 127.0.0.1 9042 -k stock_chart -e \"COPY stock_info (id, ticker, average_stock, change_percent, company, num_owners, recommendation_percent, related_tags, state) FROM STDIN WITH DELIMITER ='|' AND HEADER = TRUE;\"",
+    "postseed:cassandra": "gunzip -c database/dataGeneration/quoteData.csv.gz | cqlsh 127.0.0.1 9042 -k stock_chart -e \"COPY stock_quotes (stock_id, price, time_stamp, label) FROM STDIN WITH DELIMITER ='|' AND HEADER = TRUE;\"",
     "test": "jest --verbose",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --colors"
@@ -25,6 +29,7 @@
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.3",
+    "cassandra-driver": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "faker": "^4.1.0",
