--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jest-environment-node": "^24.5.0",
     "jest-to-match-shape-of": "^1.2.0",
     "jquery": "^3.3.1",
+    "newrelic": "^5.7.0",
     "path": "^0.12.7",
     "pg": "^7.10.0",
     "prop-types": "^15.7.2",
