--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "webpack --mode development --watch",
     "start:server": "nodemon server/index.js",
+    "start:database": "node run database.js",
     "build": "webpack --mode production",
     "generate": "npm run generate:stockInfo && npm run generate:quoteInfo",
     "generate:stockInfo": "node database/dataGeneration/stockInfo/cluster.js",
