--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-promise-router": "^3.0.3",
     "faker": "^4.1.0",
